# launder

./: CLAUDE.md  Cargo.toml  Makefile  README.md
src/: cli.rs  config.rs  emit.rs  engine.rs  input.rs  lib.rs  main.rs  registry.rs  report.rs  system.rs
src/detect/: ids.rs  mod.rs  net.rs  paths.rs  secrets.rs
tests/: cases.rs
